BUG#33355 : Backup: hang if database is mysql

Code now throws error if mysql or information_schema is found in
the database list. Code throws error if database list is empty.